--- a/index.html
+++ b/index.html
@@ -8,13 +8,25 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
     <script src="p5.play.js"></script>
 
-    <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
+
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/6.3.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.3.0/firebase-database.js"></script>
-
-
+      
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+         https://firebase.google.com/docs/web/setup#available-libraries -->
+    
     <script>
       // Your web app's Firebase configuration
-      //Add here
+      var firebaseConfig = {
+        apiKey: "AIzaSyC-bkZjNHqweHm6toJJlMjGQawEB1r3foQ",
+        authDomain: "car-racing-v1-0.firebaseapp.com",
+        databaseURL: "https://car-racing-v1-0-default-rtdb.firebaseio.com",
+        projectId: "car-racing-v1-0",
+        storageBucket: "car-racing-v1-0.appspot.com",
+        messagingSenderId: "2304543066",
+        appId: "1:2304543066:web:d6d82bc5af820a3e578b63"
+      };
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
     </script>
